--- a/packages/@geee-be/react-twui/css/reset.css
+++ b/packages/@geee-be/react-twui/css/reset.css
@@ -4,6 +4,6 @@ body {
 }
 
 #storybook-docs .sbdocs .docs-story {
-  color: hsl(var(--color-foreground));
-  background-color: hsl(var(--color-background));
+  color: var(--color-foreground);
+  background-color: var(--color-background);
 }
