--- a/packages/@geee-be/react-twui/src/components/Toast/style.css
+++ b/packages/@geee-be/react-twui/src/components/Toast/style.css
@@ -12,10 +12,22 @@
   --toastify-icon-color-error: var(--toastify-color-error);
   --toastify-toast-width: 320px;
   --toastify-toast-offset: 16px;
-  --toastify-toast-top: max(var(--toastify-toast-offset), env(safe-area-inset-top));
-  --toastify-toast-right: max(var(--toastify-toast-offset), env(safe-area-inset-right));
-  --toastify-toast-left: max(var(--toastify-toast-offset), env(safe-area-inset-left));
-  --toastify-toast-bottom: max(var(--toastify-toast-offset), env(safe-area-inset-bottom));
+  --toastify-toast-top: max(
+    var(--toastify-toast-offset),
+    env(safe-area-inset-top)
+  );
+  --toastify-toast-right: max(
+    var(--toastify-toast-offset),
+    env(safe-area-inset-right)
+  );
+  --toastify-toast-left: max(
+    var(--toastify-toast-offset),
+    env(safe-area-inset-left)
+  );
+  --toastify-toast-bottom: max(
+    var(--toastify-toast-offset),
+    env(safe-area-inset-bottom)
+  );
   --toastify-toast-min-height: 64px;
   --toastify-toast-max-height: 800px;
   --toastify-toast-bd-radius: 6px;
@@ -28,8 +40,20 @@
   --toastify-text-color-warning: #fff;
   --toastify-text-color-error: #fff;
   --toastify-spinner-color: hsl(var(--color-paper-fg));
-  --toastify-spinner-color-empty-area: color-mix(in hsl, hsl(var(--color-paper-fg)), hsl(var(--color-paper)) 70%);
-  --toastify-color-progress-light: linear-gradient(to right, #4cd964, #5ac8fa, #007aff, #34aadc, #5856d6, #ff2d55);
+  --toastify-spinner-color-empty-area: color-mix(
+    in hsl,
+    hsl(var(--color-paper-fg)),
+    hsl(var(--color-paper)) 70%
+  );
+  --toastify-color-progress-light: linear-gradient(
+    to right,
+    #4cd964,
+    #5ac8fa,
+    #007aff,
+    #34aadc,
+    #5856d6,
+    #ff2d55
+  );
   --toastify-color-progress-dark: #bb86fc;
   --toastify-color-progress-info: var(--toastify-color-info);
   --toastify-color-progress-success: var(--toastify-color-success);
@@ -110,7 +134,6 @@
   padding: 1rem;
   @apply rounded-lg;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: justify;
   justify-content: space-between;
@@ -127,7 +150,6 @@
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 6px;
-  display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
   align-items: center;
@@ -208,7 +230,6 @@
   width: 20px;
   -ms-flex-negative: 0;
   flex-shrink: 0;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -585,11 +606,13 @@
     transform: translate3d(0, var(--y), 0) perspective(400px);
   }
   30% {
-    transform: translate3d(0, var(--y), 0) perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: translate3d(0, var(--y), 0) perspective(400px)
+      rotate3d(1, 0, 0, -20deg);
     opacity: 1;
   }
   to {
-    transform: translate3d(0, var(--y), 0) perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: translate3d(0, var(--y), 0) perspective(400px)
+      rotate3d(1, 0, 0, 90deg);
     opacity: 0;
   }
 }
