refactor: Remove Cropper component styles from twui.css for better organization

--- a/packages/@geee-be/react-twui/src/components/Cropper/style.css
+++ b/packages/@geee-be/react-twui/src/components/Cropper/style.css
@@ -1,3 +1,5 @@
+@reference "../../../css/twui.css";
+
 .advanced-cropper-line-wrapper--north,
 .advanced-cropper-line-wrapper--south {
   height: 12px;
