replace tailwindcss-animate with tw-animate-css and update dependencies

--- a/packages/@geee-be/react-twui/css/twui.css
+++ b/packages/@geee-be/react-twui/css/twui.css
@@ -7,7 +7,7 @@
 @import "./default.css";
 
 @plugin "@tailwindcss/container-queries";
-@plugin "tailwindcss-animate";
+@plugin "tw-animate-css";
 
 @custom-variant focus-visible (&:focus-visible,&:has(input:focus),&[data-focus="true"]);
 @custom-variant not-disabled (&:not(:disabled):not([data-disabled="true"]));
