--- a/packages/@geee-be/react-twui/css/twui.css
+++ b/packages/@geee-be/react-twui/css/twui.css
@@ -5,9 +5,10 @@
 @import "./calculations.css";
 @import "./like.css";
 @import "./default.css";
+@import "./tw-animate.css";
 
 @plugin "@tailwindcss/container-queries";
-@plugin "tw-animate-css";
+/* @plugin "tw-animate-css"; */
 
 @custom-variant focus-visible (&:focus-visible,&:has(input:focus),&[data-focus="true"]);
 @custom-variant not-disabled (&:not(:disabled):not([data-disabled="true"]));
