Add missing Tailwind CSS import to join component styles

--- a/packages/@geee-be/react-twui/src/components/Join/join.css
+++ b/packages/@geee-be/react-twui/src/components/Join/join.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 .join {
   @apply inline-flex items-stretch;
   & .join-item:where(:focus, :focus-visible, :focus-within) {
