--- a/packages/@geee-be/react-twui/css/theme.css
+++ b/packages/@geee-be/react-twui/css/theme.css
@@ -112,7 +112,7 @@
 }
 
 @variant dark {
-  @theme {
+  @layer theme { :root {
     --color-background: hsl(0 0% 10%);
     --color-foreground: hsl(0 0% 92%);
     /* input */
@@ -153,5 +153,5 @@
     /* gray */
     --color-gray: hsl(0 0% 85%);
     --color-gray-muted: oklch(from var(--color-gray) l c h / 0.15);
-  }
+  } }
 }
